--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-18 03:45:42
+lastsearch = 2024-07-18 04:15:16
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -85.7%%
-title = Miền Bắc chiều và đêm nay còn mưa lớn cục bộ | VTVWDB
-url = https://www.youtube.com/watch?v=9CsOVMaSlyo
+match = -161.9%%
+title = 20240411 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
+url = https://www.youtube.com/watch?v=GfgBMe1fFZM
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -77,14 +77,14 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -119.0%%
-title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
-url = https://visana.vn/visa-quan-hong-dai-loan/
+match = -114.3%%
+title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
+url = https://visana.vn/visa-dai-loan/
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -9.5%%
+title = Phim Mai Có Chiếu Ở Taiwan Không
+url = https://www.tiktok.com/discover/phim-mai-có-chiếu-ở-taiwan-không?lang=en
 
 [www.travel.taipei]
 match = 19.0%%
