--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-18 03:19:03
+lastsearch = 2024-07-18 04:15:05
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -13.3%%
-title = Ways Station Gaming
-url = https://www.facebook.com/waysstation/posts/ways-station-14-hoàn-thiện-thi-công-sẵn-sàng-xuất-quân-chỉ-còn-ít-ngày-nữa-thôi-/1026295534467736/
+match = 20.0%%
+title = Rạp Chiếu Phim Cũ
+url = https://www.facebook.com/phimhaygiare/
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -112,8 +112,8 @@ title = Con lắc đơn có chiều dài ℓ = 20cm. Tại thời điểm t = 0,
 url = https://khoahoc.vietjack.com/question/1223001/con-lac-don-co-chieu-dai-20cm-tai-thoi-diem-t-0-tu-vi-tri-can-bang-con-lac-duoc-truyen-van-toc-14cm
 
 [www.instagram.com]
-match = -226.7%%
-title = THE BRIX - Eatery & Bar Lounge | For a delicious midday ...
+match = -233.3%%
+title = For a delicious midday escape, savor our Sweet & Sour ...
 url = https://www.instagram.com/thebrixsaigon/p/C03WqJnJzMF/
 
 [nhieuxe.vn]
