--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-17 23:18:55
+lastsearch = 2024-07-18 04:16:06
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -275,4 +275,9 @@ url = https://www.vietnam.vn/en/hoc-phi-diem-chuan-lop-10-cac-truong-tu-o-ha-noi
 match = -118.8%%
 title = Thị trường rung lắc, đảo chiều phút cuối phiên
 url = https://nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
+
+[m.nhipcaudautu.vn]
+match = -118.8%%
+title = Thị trường rung lắc, đảo chiều phút cuối phiên
+url = https://m.nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuoi-phien-3359333/
 
