--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-18 00:31:45
+lastsearch = 2024-07-18 04:16:49
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,9 +32,9 @@ title = Japanese spider crab
 url = https://en.wikipedia.org/wiki/Japanese_spider_crab
 
 [www.facebook.com]
-match = 0.0%%
-title = Sylvia Gani
-url = https://www.facebook.com/sylviagani/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
 match = -323.1%%
