--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-18 04:26:51
+lastsearch = 2024-07-18 05:32:53
 
 [www.lazada.vn]
 match = -60.9%%
@@ -12,19 +12,19 @@ title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
 url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [www.facebook.com]
-match = 52.2%%
-title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+match = 85.0%%
+title = Chiếu Nhựa Thái Bình
+url = https://www.facebook.com/chieunhuathaibinh/?locale=cs_CZ
 
 [www.sendo.vn]
-match = 26.1%%
-title = chiếu nhựa thái bình 1m8 x2m - chieu1m8
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m8-x2m-43900792.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [shopee.vn]
-match = -17.4%%
-title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
-url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
+match = 26.1%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng
+url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -32,14 +32,14 @@ title = Cơ Sở Sản Xuất Chiếu Thái Bình
 url = https://trangvangvietnam.com/listings/1187701263/co-so-san-xuat-chieu-thai-binh.html
 
 [www.yellowpages.vn]
-match = 15.8%%
-title = sản xuất chiếu nhựa
-url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
+match = 0.0%%
+title = danh sách Chiếu Cói
+url = https://www.yellowpages.vn/tgcls/20490435/Chiếu-Cói.html?j=1
 
 [m.facebook.com]
-match = -69.6%%
-title = Tổng kho chiếu nhựa - sỉ lẻ chiếu nhựa Thái Bình | Thai Binh
-url = https://m.facebook.com/61552781727977/
+match = 4.3%%
+title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
+url = https://m.facebook.com/CHIEUNHUAHATRANG/
 
 [sangothaibinh.com]
 match = 47.8%%
