--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-18 04:11:59
+lastsearch = 2024-07-18 05:35:47
 
 [gobearcats.com]
 match = -142.1%%
@@ -490,4 +490,14 @@ url = https://ktla.com/news/california/4-southern-california-high-schoolers-name
 match = -78.9%%
 title = GEORGIA STATE BOARD of COSMETOLOGY AND ...
 url = https://sos.ga.gov/sites/default/files/2022-06/january_2022_minutes.pdf
+
+[www.khituongvietnam.gov.vn]
+match = -375.0%%
+title = DBQG
+url = https://www.khituongvietnam.gov.vn/
+
+[www.seslhd.health.nsw.gov.au]
+match = -136.8%%
+title = Clinical Abbreviations List - Appendix to SESLHDPR/282
+url = https://www.seslhd.health.nsw.gov.au/sites/default/files/documents/SESLHDPR 282 APPENDIX Clinical Abbreviations List.pdf
 
