--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-18 05:17:59
+lastsearch = 2024-07-18 09:04:50
 
 [shopee.vn]
 match = -13.8%%
@@ -27,14 +27,14 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.facebook.com]
-match = 31.0%%
-title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
-url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
+match = 26.3%%
+title = Chiếu Nhựa Thái Lan
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [www.sendo.vn]
-match = 0.0%%
-title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
-url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
+match = 13.8%%
+title = Chiếu nhựa Việt Nam 1m8 -2m GIÁ RẺ NHẤT - CN182M
+url = https://www.sendo.vn/chieu-nhua-vie-t-nam-1m8-2m-gia-re-nha-t-48369789.html
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
