--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-18 08:00:06
+lastsearch = 2024-07-18 09:03:40
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -188.2%%
-title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
-url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
+match = -170.6%%
+title = Florida HOA. Are HOAs still able to enter properties ...
+url = https://www.justanswer.com/real-estate-law/ax7ur-florida-hoa-hoas-able-enter-properties.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -410,4 +410,9 @@ url = https://consumer.sc.gov/HOA-Ed
 match = 5.9%%
 title = U.S. Census Bureau
 url = https://www.census.gov/
+
+[baynews9.com]
+match = -176.5%%
+title = Florida bill to require HOAs to provide rules to residents
+url = https://baynews9.com/fl/tampa/news/2024/03/07/homeowners--association-bill-florida-hoa
 
