--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-18 06:13:54
+lastsearch = 2024-07-18 09:02:13
 
 [www.everonvn.vn]
-match = 31.1%%
-title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
+match = 7.4%%
+title = ĐỆM LÒ XO EVERON, KING KOIL
+url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [demxanh.com]
 match = 29.8%%
@@ -42,9 +42,9 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = 45.7%%
-title = Nệm lò xo Everon Bonnell 180x200x23
-url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-180x200x23.html
+match = -270.0%%
+title = Nệm Everon
+url = https://www.everonqb.com/catalog/category/view/s/n-m-everon/id/2013/
 
 [www.diepxuan.com]
 match = 31.1%%
