--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-18 02:17:52
+lastsearch = 2024-07-18 09:00:51
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -370,4 +370,14 @@ url = https://pubs.acs.org/doi/10.1021/es4011064
 match = 5.0%%
 title = Faculty Publications
 url = https://www.odu.edu/library/faculty-publications
+
+[www.partstown.com]
+match = -20.0%%
+title = Blakeslee UC-20 Parts Diagram
+url = https://www.partstown.com/blakeslee/uc-20/diagram
+
+[www.ebay.com]
+match = 5.0%%
+title = HP computer speakers UC-230
+url = https://www.ebay.com/itm/184432807281
 
