--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-07-18 09:53:02
+lastsearch = 2024-07-18 10:34:16
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -37,9 +37,9 @@ title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
-match = 53.2%%
-title = Everon Quảng Bình Nệm lò xo Everon Kingkoil 180x200x27 CLOUD ...
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.html
+match = -270.0%%
+title = Nệm Everon
+url = https://www.everonqb.com/catalog/category/view/s/n-m-everon/id/2013/
 
 [everonvn.com.vn]
 match = 25.6%%
