--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-18 11:16:10
+lastsearch = 2024-07-18 11:35:01
 
 [chieutruc.info]
 match = -100.0%%
@@ -22,9 +22,9 @@ title = CAPCUT VIỆT NAM | Mn ơi giúp e vs
 url = https://m.facebook.com/groups/400243538122762/posts/989653909181719/
 
 [nhathuoclongchau.com.vn]
-match = -104.5%%
-title = Mang thai 18 tuần nặng bao nhiêu cân để bé phát triển tốt?
-url = https://nhathuoclongchau.com.vn/bai-viet/thai-18-tuan-nang-bao-nhieu-thay-doi-cua-me-bau-mang-thai-18-tuan.html
+match = -90.9%%
+title = Cách nhìn hình siêu âm làm sao biết trai hay gái chính xác
+url = https://nhathuoclongchau.com.vn/bai-viet/cach-nhin-hinh-sieu-am-lam-sao-biet-trai-hay-gai-chinh-xac-nhat-70617.html
 
 [www.vinmec.com]
 match = -18.2%%
@@ -42,9 +42,9 @@ title = Chiếu Cói Thân Vui Thái Bình
 url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
 
 [medlatec.vn]
-match = -77.3%%
-title = Bác sĩ giải đáp tỉ mỉ các chỉ số thai nhi theo tuần
-url = https://medlatec.vn/tin-tuc/bac-si-giai-dap-ti-mi-cac-chi-so-thai-nhi-theo-tuan-s74-n23646
+match = -50.0%%
+title = Các chỉ số thai nhi và những điều mẹ cần biết
+url = https://medlatec.vn/tin-tuc/cac-chi-so-thai-nhi-va-nhung-dieu-me-can-biet-s195-n19747
 
 [www.lazada.vn]
 match = -68.2%%
@@ -215,4 +215,9 @@ url = https://www.htv.com.vn/lich-phat-song
 match = -4.5%%
 title = Chú Thuật Hồi Chiến | Jujutsu Kaisen
 url = https://vieon.vn/chu-thuat-hoi-chien.html
+
+[znews.vn]
+match = -109.1%%
+title = Màn cởi áo, khoe body 6 múi của thí sinh Nam vương Thế ...
+url = https://znews.vn/man-coi-ao-khoe-body-6-mui-cua-thi-sinh-nam-vuong-the-gioi-viet-nam-post1486155.html
 
