--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-18 09:01:53
+lastsearch = 2024-07-18 11:36:38
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = 20.0%%
-title = Rạp Chiếu Phim Cũ
-url = https://www.facebook.com/phimhaygiare/
+match = 0.0%%
+title = PHOTOTIMEVietnam
+url = https://www.facebook.com/phototimevn/
 
 [banhang.shopee.vn]
 match = -66.7%%
