--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-18 10:45:07
+lastsearch = 2024-07-18 11:38:29
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,19 +32,19 @@ title = Japanese spider crab
 url = https://en.wikipedia.org/wiki/Japanese_spider_crab
 
 [www.facebook.com]
-match = 0.0%%
-title = Sylvia Gani
-url = https://www.facebook.com/sylviagani/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -215.4%%
-title = Jay-Z & Kanye West - Ni**as In Paris (Explicit)
-url = https://www.youtube.com/watch?v=gG_dA32oH44
+match = -338.5%%
+title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
+url = https://www.youtube.com/watch?v=wwH3mdjbKac
 
 [www.regmovies.com]
-match = -223.1%%
-title = Regal Hollywood - Gainesville Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
+match = -215.4%%
+title = Regal Hollywood @ North I-85 Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [dds.georgia.gov]
 match = -284.6%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -15.4%%
-title = Ayu Gani 🐘 (@ganegani)
-url = https://www.instagram.com/ganegani/?hl=en
+match = -176.9%%
+title = Pulse Kenya | Ni song gani ? #PulseTeaser ...
+url = https://www.instagram.com/p/C9hQQyzuWOP/
 
 [www.nebf.com]
 match = -46.2%%
