--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-18 09:50:47
+lastsearch = 2024-07-18 12:33:25
 
 [demxanh.com]
 match = -3.3%%
@@ -145,4 +145,9 @@ url = https://fptshop.com.vn/News-18.xml
 match = -6.7%%
 title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
 url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
+
+[dienmaycholon.com]
+match = -20.0%%
+title = Hướng dẫn sử dụng điều khiển điều hòa Panasonic
+url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-su-dung-dieu-khien-dieu-hoa-panasonic
 
