--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-18 11:18:48
+lastsearch = 2024-07-18 12:37:42
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -47,9 +47,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.thegioididong.com]
-match = -206.2%%
-title = Top 13 game ít dung lượng trên mobile cực hay để trải ...
-url = https://www.thegioididong.com/game-app/top-game-it-dung-luong-tren-mobile-cuc-hay-de-trai-nghiem-1358044
+match = -212.5%%
+title = Top 20 game online mobile (Android, iOS) hay nhất nên ...
+url = https://www.thegioididong.com/game-app/top-10-game-online-hay-nhat-tren-dien-thoai-android-ios-1312542
 
 [saigontourist.edu.vn]
 match = -100.0%%
