--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-07-18 09:59:41
+lastsearch = 2024-07-18 12:33:56
 
 [nemgiakho.com]
 match = 8.6%%
@@ -80,4 +80,9 @@ url = https://thegioinem.com/bang-gia-nem-cao-su-lien-a.html
 match = 65.7%%
 title = Nệm caosu Liên Á Classic 180x200x10 - Điệp Xuân
 url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
+
+[nem.vn]
+match = 28.6%%
+title = NỆM CAO SU THIÊN NHIÊN LIÊN Á – CLASSIC - NEM.VN
+url = https://nem.vn/nem-cao-su-thien-nhien-lien-a-classic
 
