--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-07-18 10:34:34
+lastsearch = 2024-07-18 12:38:27
 
 [www.everonvn.vn]
 match = 68.0%%
@@ -38,8 +38,8 @@ url = https://thegioichanra.com/san-pham/ruot-goi-nam-standard-everon-kich-thuoc
 
 [everon.com.vn]
 match = 48.3%%
-title = Ruột Gối Everon Micro Evermic
-url = https://everon.com.vn/ruot-goi-everon-micro-evermic/
+title = RUỘT GỐI EVERON STANDARD SOFT
+url = https://everon.com.vn/ruot-goi-standard-soft/
 
 [suongtuyet.com]
 match = 13.8%%
@@ -47,9 +47,9 @@ title = Ruột Gối Bông Thấp - Classic Everon 45 x 65 cm
 url = https://suongtuyet.com/ruot-goi-dai-everon-45-x-65-cm
 
 [demxanh.com]
-match = 50.0%%
-title = Ruột gối Everon Classic Soft
-url = https://demxanh.com/ruot-goi-everon-classic-soft.html
+match = -13.8%%
+title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
+url = https://demxanh.com/ruot-goi.html
 
 [everonletrongtan.com]
 match = 51.7%%
@@ -62,9 +62,9 @@ title = Ruột Gối Nằm Everon Thư Giãn Cổ Kích Thước 45x65 ...
 url = https://www.lazada.vn/products/ruot-goi-nam-everon-thu-gian-co-kich-thuoc-45x65-giam-moi-ho-tro-co-chinh-hang-by-icon-bedding-i2132799966.html
 
 [shopee.vn]
-match = -3.4%%
-title = Ruột gối nằm K-Bedding By Everon kích thước 45x65cm
-url = https://shopee.vn/Ruột-gối-nằm-K-Bedding-By-Everon-kích-thước-45x65cm-Gòn-lông-vũ-gối-nằm-thấp-màu-ngẫu-nhiên-i.300998460.10256309789
+match = -20.7%%
+title = Ruột gối Everon siêu êm Classic Soft 45x65 (Độ cao: 16cm)
+url = https://shopee.vn/Ruột-gối-Everon-siêu-êm-Classic-Soft-45x65-(Độ-cao-18cm)-i.34660875.10533606712
 
 [www.everonqb.com]
 match = 72.4%%
